--- a/app_client/index.html
+++ b/app_client/index.html
@@ -10,12 +10,15 @@
     <script src='/angular/angular.min.js'></script>
     <script src='/lib/angular-route.min.js'></script>
     <script src='/lib/angular-sanitize.min.js'></script>
+    <script src='/lib/ui-bootstrap-custom-0.12.0.min.js'></script>
+    <script src='/lib/ui-bootstrap-custom-tpls-0.12.0.min.js'></script>
     <script src='/angular/loc8r.min.js'></script>
     <!--
     <script src='/app.js'></script>
     <script src='/home/home.controller.js'></script>
     <script src='/about/about.controller.js'></script>
     <script src='/locationDetail/locationDetail.controller.js'></script>
+    <script src='/reviewModal/reviewModal.controller.js'></script>
     <script src='/common/directives/footerGeneric/footerGeneric.directive.js'></script>
     <script src='/common/directives/navigation/navigation.directive.js'></script>
     <script src='/common/directives/pageHeader/pageHeader.directive.js'></script>
